<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>two_assignament_1</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zerbi2002@gmail.com">ros</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>nav2_msgs</depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>apriltag_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>opencv4</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>apriltag_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>opencv4</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
